src/app-bar/styles.scss
@import "../../variables/colors.scss";
@import "../../variables/spacing.scss";
@import "../../variables/fonts.scss";

.appBar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  height: 64px;
  padding: 0 24px;
  border-bottom: 1px solid $grayLight;
  font-family: $fontBase;
}

.appBarSection {
  display: flex;
  align-items: center;
}

.appBarTitle {
  font-size: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

// Rules for "TRANSPARENT" context
.contextTransparent.appBar {
  border-bottom: none;
  padding: 0;
}

// Rules for "BOTTOM_ACTIONS" context
.contextBottomActions.appBar {
  border-top: 1px solid $grayLight;
  border-bottom: none;
  background: $grayLightest;
  border-bottom-left-radius: $borderRadiusBase;
  border-bottom-right-radius: $borderRadiusBase;
}

